Fix default event getting